@@ -5,10 +5,15 @@
                  [clj-ldap "0.0.2"]
                  [org.neo4j/neo4j "1.2"]
                  [compojure "0.6.0-RC4"]
-                 [ring/ring-jetty-adapter "0.3.5"]
+                 [ring/ring-jetty-adapter "0.3.6"]
                  [hiccup "0.3.4"]
                  [clj-time "0.3.0-SNAPSHOT"]
                  [incanter "1.2.3"]]
-  :dev-dependencies [[swank-clojure "1.2.1"]]
+  :dev-dependencies [[swank-clojure "1.3.0-SNAPSHOT"]]
   :warn-on-reflection true
-  :main dredd.core)
+  :main dredd.core
+  :jvm-opts ["-Dfile.encoding=utf-8"
+             "-Dswank.encoding=utf-8"
+             "-Xms256m"
+             "-Xmx512m"
+             "-XX:MaxPermSize=256m"])
